Fix epic tab dropdown menu overlay on mobile
Changelog: fixed
EE: true

--- a/ee/app/assets/stylesheets/page_bundles/epics.scss
+++ b/ee/app/assets/stylesheets/page_bundles/epics.scss
@@ -58,6 +58,7 @@
 }
 
 .epic-tabs-content {
+  overflow: visible;
   .roadmap-container {
     min-height: 600px;
 
